--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" , initialscale="1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Three JS Example</title>
+    <title>SpeedRun</title>
     <link rel="stylesheet" href="index.css" />
     <style></style>
     <script src="/scripts/main.js"></script>
